2004-03-03  Murray Cumming  <murrayc@murrayc.com>

	* gtk/gtkradiobutton.h, radiomenuitem.h: Corrected the group_changed
	signal vfunc declaration, adding the first parameter, which is the
	widget emitting the signal.

2004-03-03  Morten Welinder  <terra@gnome.org>

	* tests/testfilechooser.c (update_preview_cb): Plug leak.

Tue Mar  2 23:39:55 2004  Jonathan Blandford  <jrb@gnome.org>

	* gtk/gtkfilechooserdialog.c
	(file_chooser_widget_default_realized_size_changed): Split
	function into realized and unrealized variants, and consolidate
	the handling fo size-changing and default changing.

	* gtk/gtkfilechooserembed.[ch] (gtk_file_chooser_embed_class_init):
	remove resizable-hints-changed, as it just complicated things.

	* gtk/gtkfilechooserdefault.c (update_appearance): Don't emit
	resizable-hints-changed.
	
2004-03-03  Tor Lillqvist  <tml@iki.fi>

	* gtk/gtk.def: Add a missing entry. (#135982, J. Ali Harlow)

	* NEWS: Correct spelling of my name in one place.

2004-03-02  Federico Mena Quintero  <federico@ximian.com>

	* gtk/gtkfilechooserdefault.c
	(gtk_file_chooser_default_set_current_folder): Handle errors in
	setting the path bar's path.  Fixes #136000, based on a patch by
	Morten Welinder.

	* gtk/gtkfilesystemunix.c (gtk_file_system_unix_insert_bookmark):
	Don't free our own propagated error.

	* gtk/gtkpathbar.c (gtk_path_bar_set_path): Likewise, and free the
	parent_path upon error.  Fixes #136006, patch by Morten Welinder.
	(gtk_path_bar_set_path): Unref the file_folder upon error.
	(gtk_path_bar_set_path): Return a boolean success code.

Wed Mar  3 00:28:59 2004  Matthias Clasen  <maclas@gmx.de>

	* tests/testcombochange.c: Add an animation mode, to test 
	how the combobox behaves if the model changes while it is popped
	up.

Tue Mar  2 17:06:05 2004  Owen Taylor  <otaylor@redhat.com>

	* === Released 2.3.5 ===

	* NEWS: Updates

	* configure.in: Version 2.3.5, interface age 0.
	Require glib-2.3.5, pango-1.3.5.
