@@ -930,6 +930,10 @@ gtk_expander_enter_notify (GtkWidget        *widget,
       event->detail != GDK_NOTIFY_INFERIOR)
     {
       expander->priv->prelight = TRUE;
+
+      if (expander->priv->label_widget)
+	gtk_widget_set_state (expander->priv->label_widget, GTK_STATE_PRELIGHT);
+
       gtk_expander_redraw_expander (expander);
     }
 
@@ -949,6 +953,10 @@ gtk_expander_leave_notify (GtkWidget        *widget,
       event->detail != GDK_NOTIFY_INFERIOR)
     {
       expander->priv->prelight = FALSE;
+
+      if (expander->priv->label_widget)
+	gtk_widget_set_state (expander->priv->label_widget, GTK_STATE_NORMAL);
+
       gtk_expander_redraw_expander (expander);
     }
 
@@ -1579,14 +1587,21 @@ gtk_expander_set_label_widget (GtkExpander *expander,
     return;
 
   if (priv->label_widget)
-    gtk_widget_unparent (priv->label_widget);
+    {
+      gtk_widget_set_state (priv->label_widget, GTK_STATE_NORMAL);
+      gtk_widget_unparent (priv->label_widget);
+    }
 
   priv->label_widget = label_widget;
 
   if (label_widget)
     {
       priv->label_widget = label_widget;
+
       gtk_widget_set_parent (label_widget, GTK_WIDGET (expander));
+
+      if (priv->prelight)
+	gtk_widget_set_state (label_widget, GTK_STATE_PRELIGHT);
     }
 
   if (GTK_WIDGET_VISIBLE (expander))
